# automatisation-veille

./: .dockerignore  README.md  docker-compose.yml
api/: Dockerfile  app.py  pyproject.toml  run.sh
api/endpoints/: article_retriever.py
api/src/: app.py  main.py
api/src/article_retriever/: main.py
api/src/article_retriever/endpoints/: article_retriever.py  article_summarizer.py
api/src/article_retriever/llm/: llm_handler.py
api/src/article_retriever/research/: research_handler.py
api/src/article_retriever/utils/: authenticator.py  error_handler.py
api/src/endpoints/: article_retriever.py  article_summarizer.py
api/src/llm/: llm_handler.py
api/src/llm/llm_client/: azure_openai_client.py  llm_client.py  mistral_client.py  openai_client.py
api/src/llm_client/: llm_client.py  mistral_client.py  openai_client.py
api/src/research/: research_handler.py
api/src/research/research_client/: newsapi_client.py  research_client.py  (+1 more)
api/src/tests/: test_endpoint.py  test_llm.py  test_retrieval.py
api/src/utils/: authenticator.py  error_handler.py
api/src/web_article_retriever/: serpapi_client.py  web_article_retriever.py
api/template/exception/: exception_template.py
api/tests/: test_endpoint.py
api/utils/: authenticator.py  error_handler.py  logger.py
app/: Dockerfile  app.py  pyproject.toml  run.sh
app/.streamlit/: config.toml
app/src/: main.py
app/src/authenticator/: authentication_client.py
app/src/tests/: api_test.py
app/src/utils/: error_handler.py
app/src/veille_assistant/: main.py
app/utils/: authenticator.py
(+16 files in other folders)
